회원가입창 구현(기능x)

--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -13,9 +13,11 @@
         <div class="form">
           <form class="login-form">
             <input id="id" type="text" placeholder="아이디"/>
+            <input id="name" type="text" placeholder="이름"/>
             <input id="password" type="password" placeholder="비밀번호"/>
-            <button id="btn">login</button>
-            <p class="message">회원이 아니신가요? <a href="/register">계정 만들기</a></p>
+            <input id="confirm-password" type="password" placeholder="비밀번호 확인"/>
+            <button id="btn">SIGN UP</button>
+            <p class="message">회원이신가요?  <a href="/login">Login</a></p>
           </form>
         </div>
       </div>
