--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="stylesheet" href="/css/home/login.css">
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -16,9 +16,9 @@
             <input id="name" type="text" placeholder="이름"/>
             <input id="password" type="password" placeholder="비밀번호"/>
             <input id="confirm-password" type="password" placeholder="비밀번호 확인"/>
-            <button id="btn">SIGN UP</button>
             <p class="message">회원이신가요?  <a href="/login">Login</a></p>
           </form>
+          <button id="btn">SIGN UP</button>
         </div>
       </div>
 </body>
